--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -6,7 +6,11 @@ path:'.'
 %>
 <% include common/_header %>
 <main class="p-index">
-    <article class="p-index__wrap py-3">
+    <article class="">
+        <header class="p-index__hero">
+            <img class=" d-none d-lg-block" src="/assets/img/hero/banner@2x.jpg" alt="法人向け語学研修・英語研修 - 産経オンライン英会話Plus">
+            <img class=" d-lg-none" src="/assets/img/hero/sp-banner@2x.jpg" alt="法人向け語学研修・英語研修 - 産経オンライン英会話Plus">
+        </header>
         <section class="p-index__target container">
             <h2 class="mb-5">
                 <img class="p-index__target-title" src="assets/img/sp/sp-subtitle.png" alt="対象">
@@ -55,24 +59,136 @@ path:'.'
                     <img class="w-100 mx-auto d-none d-lg-block" src="assets/img/reason/subtitle-reasons.png" alt="産経オンライン英会話が選ばれる理由">
                 </h2>
 
-                <div class="row px-2">
-                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white">
-                        <dt class="">
-                            <div class="no"></div>
+                <div class="row px-2 justify-content-around">
+                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white py-5 px-4 mb-5">
+                        <dt class="mb-3">
+                            <div class="no position-absolute"></div>
                             <div class="icon"></div>
                         </dt>
 
                         <dd>
-                            <h3 class="font-weight-bold">1ヶ月10回4400円から</h3>
+                            <h3 class="font-weight-bold mb-3">1ヶ月10回4400円から</h3>
                             <p class="mb-0">
                                 仕事をしながらオンライン英会話を受講すると月に10回～15回、3日に1回～2日に1回くらいがぴったりではないでしょうか。<br>
                                 月の回数を抑えた分、費用もおさえられるプランが人気です。
                             </p>
                         </dd>
                     </dl>
+
+                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white py-5 px-4 mb-5">
+                        <dt class="mb-3">
+                            <div class="no position-absolute"></div>
+                            <div class="icon"></div>
+                        </dt>
+
+                        <dd>
+                            <h3 class="font-weight-bold mb-3">1⽇のレッスン受講が無制限</h3>
+                            <p class="mb-0">
+                                ビジネスパーソンはまずは仕事が第一優先、学習できない日も多々あるのが現実です。<br>
+                                そんな多忙なビジネスパーソンの⽅々に最適な法⼈特典「1日無制限の予約・受講可能」をご⽤意しています。<br>
+                                お休みの日にまとめて受講できるので、1日1回受講プランより消化率も高まります！
+                            </p>
+                        </dd>
+                    </dl>
+
+                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white py-5 px-4 mb-5">
+                        <dt class="mb-3">
+                            <div class="no position-absolute"></div>
+                            <div class="icon"></div>
+                        </dt>
+
+                        <dd>
+                            <h3 class="font-weight-bold mb-3">基本料金内にビジネステキストが370種類含まれている</h3>
+                            <p class="mb-0">
+                                受講生がそれぞれのレベルに合った教材を選んで、受講できるよう日常英会話・ビジネス英会話・職業別英会話・TOEIC®対策・学校教科書準拠など、1,200の教材を取り揃えています。<br>
+                                教材データ・音声ファイルをダウンロード可能で、通学・通勤中もリスニング強化できます。
+                            </p>
+                        </dd>
+                    </dl>
+                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white py-5 px-4 mb-5">
+                        <dt class="mb-3">
+                            <div class="no position-absolute"></div>
+                            <div class="icon"></div>
+                        </dt>
+
+                        <dd>
+                            <h3 class="font-weight-bold mb-3">多言語対応</h3>
+                            <p class="mb-0">
+                                英語以外にも、中国語、タイ語のレッスンを提供しています。<br>
+                                貴社が採用する外国人社員への日本語レッスンも提供しております。
+                            </p>
+                        </dd>
+                    </dl>
+                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white py-5 px-4 mb-5">
+                        <dt class="mb-3">
+                            <div class="no position-absolute"></div>
+                            <div class="icon"></div>
+                        </dt>
+
+                        <dd>
+                            <h3 class="font-weight-bold mb-3">⼈事・研修担当者様の管理画⾯を無料でご提供</h3>
+                            <p class="mb-0">
+                                研修ご担当者向けにの方は、各受講生の受講状況・効果の把握が可能な「管理機能・管理画面」をご用意しております。
+                            </p>
+                        </dd>
+                    </dl>
+                    <dl class="p-index__reason-card col-12 col-lg-4 position-relative bg-white py-5 px-4 mb-5">
+                        <dt class="mb-3">
+                            <div class="no position-absolute"></div>
+                            <div class="icon"></div>
+                        </dt>
+
+                        <dd>
+                            <h3 class="font-weight-bold mb-3">各分野のエキスパート3社による共同事業</h3>
+                            <p class="mb-0">
+                                産経新聞グループの信頼を届ける 『産経デジタル』「学ぶ」「働く」「支える」を応援する 『ヒューマンホールディングス株式会社』Your Global
+                                Partner『トランスコスモス株式会社』3社による共同事業です。<br>
+                                新聞、教育事業、IT、各分野のエキスパートが受講者様の英会話学習をバックアップする体制を組んでいるので、初心者から上級者の方まで安心して学んでいただけます。
+                            </p>
+                        </dd>
+                    </dl>
+
+
                 </div>
             </div>
 
+
+        </section>
+
+        <section class="p-index__company py-5">
+            <div class="container">
+                <h2 class="px-5 mt-lg-5 mb-5 text-center">
+                    <img class="w-100" src="assets/img/company/title.png" alt="企業導入実績も多数">
+                </h2>
+                <p class="text-center mb-lg-5">
+                    国内オンライン英会話スクールで初めて教育ISO認証を2種類取得した高いサービス品質で、<br>
+                    様々な企業や学校から、信頼と評価をいただいております。</p>
+                <h3 class="font-weight-bold text-center">
+                    ご利用企業事例
+                </h3>
+                <p class="text-center mb-lg-5">多数の法人様に導入いただいております。</p>
+                <div class="p-index__company-logo d-flex flex-wrap justify-content-around">
+                    <img class="mb-3" src="assets/img/company/logo_inpit@2x.png" alt="企業事例">
+                    <img class="mb-3" src="assets/img/company/logo_ntn@2x.png" alt="企業事例">
+                    <img class="mb-3" src="assets/img/company/logo_kobecity@2x.png" alt="企業事例">
+                    <img class="mb-3" src="assets/img/company/logo_jnj@2x.png" alt="企業事例">
+                    <img src="assets/img/company/logo_happoen@2x.png" alt="企業事例">
+                    <img src="assets/img/company/logo_hitachi@2x.png" alt="企業事例">
+                    <img src="assets/img/company/logo_mitsubishi@2x.png" alt="企業事例">
+                    <img src="assets/img/company/logo_ricoh@2x.png" alt="企業事例">
+                </div>
+            </div>
+        </section>
+
+        <section class="p-index__flow">
+            <div class="container">
+                <h2 class="px-5 mb-5 text-center">
+                    <img class="w-100" src="assets/img/flow/title.png" alt="ご導入までの流れ">
+                </h2>
+
+                <img class="d-lg-none" src="assets/img/sp/sp-flow.png" alt="ご導入までの流れ">
+                <img class="d-none d-lg-block" src="assets/img/flow/step.png" alt="ご導入までの流れ">
+            </div>
 
         </section>
     </article>
