--- a/src/sass/foundation/_svg.scss
+++ b/src/sass/foundation/_svg.scss
@@ -58,10 +58,45 @@ SVG
  */
 
 
-// map
-@mixin svg-icon-map($size:'') {
+// number
+@mixin svg-no-01($size:'') {
 	width: $size;
 	height: $size;
 	display: block;
-	background: inline-svg('')center/contain no-repeat;
+	background: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="71.424" height="48.256" viewBox="0 0 71.424 48.256"><path id="number01" d="M19.52.9c10.048,0,16.832-8.448,16.832-24.32,0-15.808-6.784-23.936-16.832-23.936-10.112,0-16.9,8.064-16.9,23.936S9.408.9,19.52.9Zm0-8.832c-3.392,0-6.144-2.944-6.144-15.488s2.752-15.1,6.144-15.1,6.08,2.56,6.08,15.1S22.912-7.936,19.52-7.936ZM43.968,0h30.08V-9.216H65.472V-46.464H57.088a33.308,33.308,0,0,1-11.776,4.352v7.04H54.08V-9.216H43.968Z" transform="translate(-2.624 47.36)"/></svg> ')center/contain no-repeat;
+}
+
+@mixin svg-no-02($size:'') {
+	width: $size;
+	height: $size;
+	display: block;
+	background: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="72.064" height="48.256" viewBox="0 0 72.064 48.256"><path id="number02" d="M19.52.9c10.048,0,16.832-8.448,16.832-24.32,0-15.808-6.784-23.936-16.832-23.936-10.112,0-16.9,8.064-16.9,23.936S9.408.9,19.52.9Zm0-8.832c-3.392,0-6.144-2.944-6.144-15.488s2.752-15.1,6.144-15.1,6.08,2.56,6.08,15.1S22.912-7.936,19.52-7.936ZM41.664,0H74.688V-9.6H65.92a67.492,67.492,0,0,0-7.808.64c7.168-7.424,14.4-15.68,14.4-23.424,0-9.088-6.4-14.976-15.616-14.976-6.784,0-11.136,2.432-15.808,7.36L47.3-33.856c2.3-2.3,4.8-4.608,8.064-4.608,3.84,0,6.208,2.3,6.208,6.72,0,6.528-8.384,14.464-19.9,25.216Z" transform="translate(-2.624 47.36)"/></svg> ')center/contain no-repeat;
+}
+
+@mixin svg-no-03($size:'') {
+	width: $size;
+	height: $size;
+	display: block;
+	background: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="71.808" height="48.256" viewBox="0 0 71.808 48.256"><path id="number03" d="M19.52.9c10.048,0,16.832-8.448,16.832-24.32,0-15.808-6.784-23.936-16.832-23.936-10.112,0-16.9,8.064-16.9,23.936S9.408.9,19.52.9Zm0-8.832c-3.392,0-6.144-2.944-6.144-15.488s2.752-15.1,6.144-15.1,6.08,2.56,6.08,15.1S22.912-7.936,19.52-7.936ZM56.832.9c9.472,0,17.6-4.864,17.6-13.568,0-5.952-3.9-9.728-9.152-11.264v-.32C70.272-26.368,72.9-29.824,72.9-34.5c0-8.192-6.464-12.864-16.32-12.864-5.632,0-10.368,2.3-14.784,5.952l5.76,6.976c2.88-2.56,5.312-4.032,8.512-4.032,3.52,0,5.44,1.728,5.44,4.864,0,3.456-2.56,5.888-10.688,5.888v8.064c9.984,0,12.16,2.3,12.16,6.208,0,3.328-2.88,5.12-7.3,5.12-3.712,0-7.04-1.92-9.92-4.608L40.512-5.76C43.968-1.728,49.28.9,56.832.9Z" transform="translate(-2.624 47.36)"/></svg>')center/contain no-repeat;
+}
+
+@mixin svg-no-04($size:'') {
+	width: $size;
+	height: $size;
+	display: block;
+	background: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="73.664" height="48.256" viewBox="0 0 73.664 48.256"><path id="number04" d="M19.52.9c10.048,0,16.832-8.448,16.832-24.32,0-15.808-6.784-23.936-16.832-23.936-10.112,0-16.9,8.064-16.9,23.936S9.408.9,19.52.9Zm0-8.832c-3.392,0-6.144-2.944-6.144-15.488s2.752-15.1,6.144-15.1,6.08,2.56,6.08,15.1S22.912-7.936,19.52-7.936ZM51.264-19.52l5.44-9.344c1.344-2.752,2.624-5.376,3.84-8.064H60.8c-.128,3.008-.384,7.616-.384,10.624v6.784ZM60.416,0H71.04V-10.816h5.248v-8.7H71.04V-46.464H56.96L40.384-18.752v7.936H60.416Z" transform="translate(-2.624 47.36)"/></svg>')center/contain no-repeat;
+}
+
+@mixin svg-no-05($size:'') {
+	width: $size;
+	height: $size;
+	display: block;
+	background: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="71.808" height="48.256" viewBox="0 0 71.808 48.256"><path id="number05" d="M19.52.9c10.048,0,16.832-8.448,16.832-24.32,0-15.808-6.784-23.936-16.832-23.936-10.112,0-16.9,8.064-16.9,23.936S9.408.9,19.52.9Zm0-8.832c-3.392,0-6.144-2.944-6.144-15.488s2.752-15.1,6.144-15.1,6.08,2.56,6.08,15.1S22.912-7.936,19.52-7.936ZM57.216.9c9.152,0,17.216-6.016,17.216-16.32,0-9.856-6.784-14.4-14.848-14.4a12.078,12.078,0,0,0-4.928.96l.7-8.064H72.32v-9.536H45.568L44.352-22.848l4.992,3.264c2.816-1.792,4.1-2.368,6.72-2.368,4.1,0,6.976,2.432,6.976,6.848,0,4.48-2.88,6.784-7.488,6.784-3.776,0-7.1-1.984-9.792-4.544L40.576-5.7A22.688,22.688,0,0,0,57.216.9Z" transform="translate(-2.624 47.36)"/></svg>')center/contain no-repeat;
+}
+
+@mixin svg-no-06($size:'') {
+	width: $size;
+	height: $size;
+	display: block;
+	background: inline-svg('<svg xmlns="http://www.w3.org/2000/svg" width="72.768" height="48.256" viewBox="0 0 72.768 48.256"><path id="number06" d="M19.52.9c10.048,0,16.832-8.448,16.832-24.32,0-15.808-6.784-23.936-16.832-23.936-10.112,0-16.9,8.064-16.9,23.936S9.408.9,19.52.9Zm0-8.832c-3.392,0-6.144-2.944-6.144-15.488s2.752-15.1,6.144-15.1,6.08,2.56,6.08,15.1S22.912-7.936,19.52-7.936ZM59.2-21.12c3.2,0,5.824,1.536,5.824,6.336,0,5.12-2.56,7.168-5.632,7.168-2.88,0-5.824-2.048-6.784-9.152C54.592-20.032,57.024-21.12,59.2-21.12ZM59.712.9c8.512,0,15.68-5.888,15.68-15.68,0-9.856-6.016-14.336-13.952-14.336a12.859,12.859,0,0,0-9.088,4.8C52.8-34.688,56.7-38.144,61.568-38.144a10.462,10.462,0,0,1,7.168,3.264l6.016-6.784A19.322,19.322,0,0,0,60.8-47.36c-9.792,0-18.88,7.936-18.88,25.088C41.92-5.76,50.688.9,59.712.9Z" transform="translate(-2.624 47.36)"/></svg>')center/contain no-repeat;
 }
